# finances

./: .gcloudignore  .gitignore  Dockerfile  README.md  discord.py  main.py  mock.py  pyproject.toml  requirements.txt  view.py
.github/workflows/: actions.yaml  ecs.yml  gcp.yaml  main.yml  terraform.yaml  terraform.yml
bigquery/: __init__.py  bigquery.py
message/: discord.py  render_jinja.py
message/templates/: earning.jinja  mom.jinja
mock/: __init__.py  mock.py
reprocess/: reprocess.py
src/message/: discord.py  render_jinja.py
src/message/templates/: mom.jinja
src/mock/: mock.py
src/reprocess/: reprocess.py
src/util/: bigquery.py  const.py  log.py  requester.py  secret.py  send_mom_return.py  transformation.py
terraform/: backend.tf  config.json  data.tf  iam.tf  lambda.tf  main.tf  outputs.tf  terraform.tfvars  teste  variables.tf
teste/: request.py
util/: const.py  daily_return.py  log.py  requester.py  transformation.py
