[tool.poetry]
name = "financa"
version = "0.1.0"
description = ""
authors = ["Gabriel Mizuno <gabrielmizuno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
functions-framework = "^3.8.2"
pendulum = "^3.0.0"
pandas-gbq = "^0.29.1"
yfinance = "==0.2.63"
jinja2 = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
