[tool.poetry]
name = "financa"
version = "0.1.0"
description = ""
authors = ["Gabriel Mizuno <gabrielmizuno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
pendulum = "^3.0.0"
yfinance = "==0.2.63"
jinja2 = "^3.1.5"
loguru = "^0.7.3"
awswrangler = "^3.14.0"
python-dotenv = "^1.2.1"
google-cloud-bigquery = "^3.39.0"
aws-lambda-powertools = "^3.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
